# OmniSched

./: CMakeLists.txt  README.md  customize.sh  module.prop
.github/workflows/: build.yml
common/: service.sh
include/: config.h  utils.h
module/: post-fs-data.sh
src/: config.cpp  core_sched.cpp  main.cpp  root_adapter.cpp  sched.cpp  utils.cpp
webroot/: index.html
